# mimuw

./: README.md
sem1/wpf/: README.md
sem1/wpf/arytmetyka/: arytmetyka.ml
sem1/wpf/drzewa_lewicowe/: leftist.ml
sem1/wpf/egzamin/: 1.ml  2.ml  3.ml
sem1/wpf/modyfikacja_drzew/: iSet.ml
sem1/wpf/origami/: origami.ml
sem1/wpf/przelewanka/: przelewanka.ml
sem1/wpf/toposort/: topol.ml
sem2/ipp/: README.md
sem2/ipp/duże/: CMakeLists.txt  Doxyfile.in  LICENSE  MainPage.dox
sem2/ipp/małe/: Makefile  README.md  config.mk  input.c  input.h  labyrinth.c  stack.c  stack.h  test.sh  util.c  util.h
sem2/po/: README.md
sem2/po/bajt_trade/: .project  build.gradle  make.sh  settings.gradle
sem2/po/matrices/: Main.java
sem2/po/oop-matrices/: .project
sem3/asd/: README.md
sem3/asd/1/: 1.cpp  2.cpp  3.cpp  5.cpp  bazarek.cpp  matryca-n.cpp  matryca-nlogn.cpp
sem3/asd/10/: graf_inwersji.cpp
sem3/asd/2/: sortowanie_komorkowe.cpp
sem3/asd/3/: mecze.cpp
sem3/asd/4/: k-inwersje.cpp  kth.cpp
sem3/asd/5/: malowanie_autostrady.cpp
sem3/asd/6/: park_bitowy-n.cpp  park_bitowy-nlogn.cpp
sem3/asd/7/: projekty.cpp
sem3/asd/8/: kapitan.cpp
sem3/asd/9/: porówniania_leksykograficzne.cpp
sem3/asd/zal1/: komitet_strajkowy.cpp  slajdy.tex
sem3/asd/zal2/: choinka.cpp
sem3/bd/: README.md
sem3/bd/projekt/: README.md
sem3/jnp1/: README.md
sem3/jnp1/hash/: Makefile  hash.cc  hash.h
sem3/jnp1/images/: Makefile  example.cc  functional.h  images.h
sem3/jnp1/kvfifo/: Makefile  kvfifo.h  kvfifo_example.cc  kvfifo_tresc.txt  tt.h
sem3/jnp1/moneybag/: example.cc  moneybag.h
sem3/jnp1/organism/: organism.h
sem3/jnp1/top7/: Makefile  top7.cc  top7_kryteria.txt
sem3/jnp1/worldcup/: constants.h  dice_set.h  exceptions.h  gameboard.h  player.h  player_set.h  squares.h  worldcup2022.h  worldcup_example.cc
sem3/pw/: README.md
sem3/pw/executor/: CMakeLists.txt  README.md
sem3/pw/executor/src/: executor.c  task.c  task.h  ui.c  ui.h  util.c  util.h
sem3/pw/java/: Makefile
sem3/rpis/: README.md
sem4/awww/: README.md
sem4/awww/szablon/: compress.sh  index.html  style.css
sem4/io/: README.md
sem4/jnp2/: README.md
sem4/jnp2/mandelbrot/: Makefile  mandelbrot.cpp  mandelbrot.cu  raport.tex
sem4/jnp2/matrix_multiply/: .clang-format  Makefile  cpu_matrix_multiply.cpp  matrix_multiply.cu  (+1 more)
sem4/sik/: README.md
sem4/so/: README.md
sem5/bsk/: README.md
sem5/jnp3/: README.md
sem5/mn/: README.md  lab1.m  lab2.m  sprint.m
sem5/pmk/: README.md
sem6/jpp/: README.md
sem6/wum/: README.md
sem7/hm1/: README.md  egzamin.typ
sem7/ipz/: README.md
sem7/mrjp/: README.md
sem7/mrjp/latte/latc/: .gitignore  LICENSE  Makefile  README.md  latc.cabal  latc_x86_64  test.sh
sem7/mrjp/latte/latc/app/: Main.hs
sem7/mrjp/latte/latc/examples/good/: bfs.lat  core035.lat  negation.lat
sem7/mrjp/latte/latc/examples/opt/: 00empty.lat  01cp.lat  02lcse.lat  03gcse1.lat  04gcse2.lat
sem7/mrjp/latte/latc/lang/: Latte.cf  setup.sh
sem7/mrjp/latte/latc/lang/syntax/: latte.vim
sem7/mrjp/latte/latc/lib/: .clang-format  runtime.c
sem7/mrjp/latte/latc/src/: Compiler.hs
sem7/mrjp/latte/latc/src/Asm/: Asm.hs  DataTypes.hs
sem7/mrjp/latte/latc/src/Opt/: DataTypes.hs  Opt.hs
sem7/mrjp/latte/latc/src/Quad/: DataTypes.hs  Quad.hs
sem7/mrjp/latte/latc/src/Typechecker/: DataTypes.hs  EnvStore.hs  Exceptions.hs  Typechecker.hs
sem7/sr/: README.md
sem7/tgs/: README.md
sem7/zlo/: README.md
sem8/ans/: README.md
sem8/de/: README.md
sem8/hpc/: README.md
sem8/hpc/lab/mpi/3/: CMakeLists.txt  TO_IMPLEMENT.txt  bench.sh  laplace-common.h  laplace-par.cpp  laplace-seq.cpp  old-laplace-par.cpp  ring-nonblocking.cpp  scatter-gather-max.cpp
sem8/hpc/lab/tbb/1/: CMakeCache.txt  CMakeLists.txt  nqueens.cpp  parfor.cpp  tasks-fib.cpp
sem8/hpc/lab/tbb/1/.cache/clangd/index/: nqueens.cpp.661F0EECFA2EA030.idx  parfor.cpp.43C96AAC5C9918E2.idx  tasks-fib.cpp.EDCECA55B81A9E2D.idx
sem8/hpc/lab/tbb/2/: CMakeLists.txt  FindTBB.cmake  nqueens.cpp  pardo.cpp  pardo_th_sp.cpp  sssp.cpp
(+301 files in other folders)
